# clinical-structuring-agent

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  SDD.md  main.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
articles/: README.md  SERIES_OVERVIEW.md  STATUS.md
articles/drafts/: 01-mcp-servers-DRAFT-v2.md  01-mcp-servers-DRAFT.md  VERSION_COMPARISON.md
articles/images/: 01-mcp-architecture.md  02-lookup-then-extract-flow.md  03-schema-minification.md  04-performance-comparison.md  05-production-trace.md  README.md
articles/outlines/: 01-mcp-servers.md  02-multi-agent-validation.md  05-fhir-to-omop.md
data/notes/: comprehensive.txt  sample1.txt
prompts/: README.md  clinical_analyst.txt  validator_supervisor.txt
scripts/: run_agent.py  run_cli.py  verify_mcp.py
src/: exceptions.py  main.py
src/clinical_analyst/: agent.py  config.py  mcp_client.py
src/fhir_doc_tool/: cli.py  server.py
src/standardizer/: nci_client.py
src/utils/: __init__.py  logging_config.py  prompt_loader.py
src/validator/: agent.py  fhir_validator.py
tests/: test_cli.py  test_clinical_analyst.py  test_clinical_analyst_comprehensive.py  test_fhir_doc.py  test_fhir_validator_report.py  test_standardizer.py  test_validator.py  test_validator_agent.py
