[project]
name = "fhir-structuring-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "fhir-resources>=8.2.0",
    "httpx>=0.28.1",
    "logfire>=4.30.0",
    "mcp>=1.26.0",
    "pydantic-ai>=1.70.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
